syntax = "proto3";
package related_resource;





/*
CreateRelatedResource请求
*/
message CreateRelatedResourceRequest {
message RelatedInfo {
    /*
    id
    */
    string id = 1 ;
    /*
    描述
    */
    string label = 2 ;
    /*
    query条件key
    */
    string reverseQueryKey = 3 ;
}
        
    
    /*
    所属模型id
    */
    string objectId = 1 ;
    /*
    关联名称
    */
    string name = 2 ;
    /*
    关联模型Id
    */
    string relatedObjectId = 3 ;
    /*
    query参数,预留字段
    */
    string query = 4 ;
    /*
    资源模型路径实例查询key信息
    */
    RelatedInfo relatedInfo = 5 ;
}

/*
CreateRelatedResource返回
*/
message CreateRelatedResourceResponse {
    /*
    实例ID
    */
    string instanceId = 1 ;
}

/*
CreateRelatedResourceApi返回
*/
message CreateRelatedResourceResponseWrapper {
    /*
    返回码
    */
    int32 code = 1 ;
    /*
    返回码解释
    */
    string codeExplain = 2 ;
    /*
    错误详情
    */
    string error = 3 ;
    /*
    返回数据
    */
    related_resource.CreateRelatedResourceResponse data = 4 ;
}

